# jlcpcb-search-mcp

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE_CODE_SETUP.md  DEPLOYMENT.md  Makefile  README.md  TESTING.md  claude.md  pyproject.toml
docs/: data-sources.md  setup-utility.md
src/jlcpcb_mcp/: __init__.py  __main__.py  database.py  server.py  setup_mcp.py  value_parser.py
tests/: test_api_client.py  test_basic.py  test_database.py  test_value_parser.py
