[project]
name = "jlcpcb-search-mcp"
version = "1.1.4"
description = "MCP server for searching JLCPCB components with live stock and pricing"
readme = "README.md"
authors = [
    { name = "Brian Peterson", email = "brian.peterson@cloudshift.cc" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.31.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
jlcpcb-mcp-setup = "jlcpcb_mcp.setup_mcp:main"
jlcpcb-mcp = "jlcpcb_mcp.server:main"

[project.urls]
Homepage = "https://github.com/peterb154/jlcpcb-search-mcp"
Repository = "https://github.com/peterb154/jlcpcb-search-mcp"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jlcpcb_mcp"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.claude",
    "/tests",
    "/.gitignore",
    "/.gitattributes",
    "/Makefile",
    "/CLAUDE.md",
    "/CLAUDE_CODE_SETUP.md",
    "/TESTING.md",
    "/uv.lock",
    "/claude.md",
    "/docs",
    "/.python-version",
    "/.mcp.json",
    "/DEPLOYMENT.md",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "python-semantic-release>=9.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=jlcpcb_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
major_on_zero = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "chore", "ci", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
